--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
     <div class="container-md container-lg">
       <a class="navbar-brand d-none d-md-block" href="{% url 'portal' %}">
-        <img src="{% static 'img/pentacle.gif' %}" class="logo" alt="" id="squad_grey no-shadow">
+        <img id="pentacle" src="{% static 'img/pentacle.gif' %}" class="logo" alt="" id="squad_grey no-shadow">
       </a>
       <button class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" id="toggler-button" data-target="#navbarNavAltMarkup" onclick="navbarButton()">
         <span class="navbar-toggler-icon"></span>
