--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -4,7 +4,7 @@
     
     <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
         
-        <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png"/>
+        <img alt="Creative Commons License" id="cc" src="https://i.creativecommons.org/l/by/4.0/88x31.png"/>
         
     </a>
         <br /> 
