--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -207,7 +207,7 @@ body {
 
   .mr-md-3,
   .mx-md-3 {
-    margin-right: 1.3em !important;
+    margin-right: 1.6em !important;
   }
 }
 
@@ -342,5 +342,16 @@ button:focus {
 .container {
   display: block !important;
   opacity: 1 !important;
+}
+
+
+
+.navbar-expand-md .navbar-nav .nav-link {
+  padding-right: 0rem; 
+   padding-left: 0rem; 
+}
+
+#hermes {
+  margin-left: 75px;
 }
 
