--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -57,7 +57,7 @@
               class="nav-item mr-md-3 mx-sm-auto align-self-center"
             {% endif %}
             >
-            <a class="nav-link" href="{% url 'essay_list' %}">Essay List</a>
+            <a class="nav-link" href="{% url 'essay_list' %}">Complete <br>Essay List</a>
           </li>
 
           <li
