--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -63,7 +63,7 @@
 
         <section class="general">
 
-          <h1>Card {{ generator.number }}: {{ generator.title }} </h1>
+          <h1>Key {{ generator.number }}: {{ generator.title }} </h1>
 
 
           <img src="{{ generator.tarot_card_image }}" alt="tarot key" />
