--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -150,7 +150,11 @@
         </section>
         <h1></h1>
         <hr>
-        <center><a id="biblio-key"href="{% url 'bibliography' %}">Site-wide Bibliography </a></center>
+        <!-- <center><a id="biblio-key"href="{% url 'bibliography' %}">Site-wide Bibliography </a></center>-->
+          
+        <center><h1>Bibliography:</h1>
+            
+        <h3><a href="{% url 'bibliography' %}"> (Site wide)</a></h3></center>
 
       </div> <!-- end wrapper star -->
   {% endif %} 
