Add finishing touches

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -100,9 +100,9 @@
     <hr>
 
     <!-- To generic tarot card landing page (random selection):  -->
-    <h3><a href="{% url 'get_tarot_key_generator' %}">Random Tarot Card Generator</a></h3>
+    <h3><a href="{% url 'get_tarot_key_generator' %}">Random Tarot <br>Card Generator</a></h3>
     <br />
-    <h3><a href="{% url 'how_to' %}">How To Use It</a></h3>
+    <h3><a href="{% url 'how_to' %}">(And How To Use It)</a></h3>
     
     <hr>
     
