Change hr tag color from crimson to white

--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -190,7 +190,7 @@ hr {
   padding: 0.5em 0;
   /* margin:5px;
     align:center; */
-  border-color: crimson;
+  border-color: white;
 }
 
 .go-to-top {
