--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %} Tarot Card Generator: {% endblock %}
+
 {% block extra_head %}
   <link rel="stylesheet" href="{% static 'css/tarot_key.normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/tarot_key.css' %}">
