--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   
   <meta name="theme-color" content="#fafafa">
   
-  <title>Global Initiation</title>
+  <title>{% block title %}{% endblock %}Global Initiation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1KHJ7HMKT1"></script>
