Uncomment Changelog prepare for Upwork

--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -205,7 +205,7 @@ li.biblio {
                         <li>{{point|safe}}</li>
             {% endfor %}
 
-<!-- 
+
             {% if content_changes %}
     
             {% for content_change in content_changes %}
@@ -220,7 +220,7 @@ li.biblio {
         
             {% endfor %}
         
-          {% endif %} -->
+          {% endif %} 
 
             <h1>Objections (Essays)</h1>
             {% for objections_article in objections_articles %}
