--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -113,7 +113,9 @@
     <!-- To landing page explaining "why" and "what" of this website:  -->
     <h3><a href="{% url 'about' %}">About This Website</a></h3>
     
-    {% if protection.On %}
+    {% if protection.protected %}
+    <!-- This means, protection is turned On -->
+
     <h3><a href="{% url 'logout' %}">Logout?</a></h3>
     {% endif %}
     <br />
