Complete auth_toggle refactor to `is_protected`?

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -16,7 +16,7 @@
               class="nav-item mx-auto mr-md-3 align-self-center"
             {% endif %}
           >
-            {% if protection.On %}
+            {% if protection.is_protected %}
               <a class="nav-link" href="{% url 'index' %}">Home</a>
             {% endif %}
           </li>
