--- a/templates/500.html
+++ b/templates/500.html
@@ -39,5 +39,22 @@
         <h1>Error 500:</h1>
         <p>Yikes! Looks like some knuckle head 'borked' the server. Hopefully this will be fixed soon. We are miracle workers, afterall.</p>
     </article>
+
+    <!-- Matomo -->
+  <script>
+    var _paq = window._paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="//tarot-matomo.herokuapp.com/";
+      _paq.push(['setTrackerUrl', u+'matomo.php']);
+      _paq.push(['setSiteId', '1']);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
+  <!-- End Matomo Code -->
+
 </body>
 </html>
