--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -17,8 +17,25 @@
 
     gtag('config', 'G-1KHJ7HMKT1');
   </script>
-  <!-- GOOGLE ANALTICS -->
+  <!-- GOOGLE ANALYTICS -->
   
+    <!-- Matomo -->
+    <script>
+      var _paq = window._paq = window._paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//tarot-matomo.herokuapp.com/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '1']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <!-- End Matomo Code -->
+
+
 </head>
 {% block content %}
 
