--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,9 @@
   <script src="{% static 'js/main.js' %} "></script>
   <script src="{% static 'js/tarot_key.js' %} "></script>
 
+  {% load matomo %}
   <!-- Matomo -->
-    <script>
+  <script>
       var _paq = window._paq = window._paq || [];
       /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
       _paq.push(['trackPageView']);
@@ -93,6 +94,7 @@
       })();
     </script>
     <!-- End Matomo Code -->
+  {% matomo %}
 
 </body>
 
