Crop, reposition, and correct wings graphic

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -56,7 +56,7 @@
 
   {% else %}
 
-  <img id="muerte" src="{% static 'img/wings-white.png' %}">
+  <img id="muerte" src="{% static 'img/wings-white-cropped.png' %}">
 
   <h3>
     This website is Hermetically Sealed  
