Refactor `swap_html` to `faravahar`

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -45,7 +45,7 @@
     {% include 'partials/_alerts.html' %}
   </div>
 
-  {% if not swap_html %}
+  {% if not faravahar %}
 
   <img src="https://placekitten.com/200/287">
 
