Add horus + refactor 'providence' to 'rsoap'

--- a/tarot_juicer/static/css/essay-main.css
+++ b/tarot_juicer/static/css/essay-main.css
@@ -907,7 +907,7 @@ section.general img.pelican-specific {
   margin-bottom: 25px;
 }
 
-.providence-img {
+.formerly-rsoap {
   padding: 10px;
   border: 0pt none;
   float: right;
