--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -167,7 +167,7 @@ html{
   padding-left: 0.5rem;
 }
 
-#providence-img {
+#formerly-rsoap{
   padding: 10px;
   border: 0pt none;
   float: right;
@@ -181,6 +181,10 @@ html{
   border: 0pt none;
   float: right;
   margin-bottom: 0.5em;
+}
+
+#pelican {
+  padding:40px;
 }
 
 #license {
