Include html element property value `black` to show bug

--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -14,7 +14,7 @@ body {
   margin: 0px;
 }
 html{
-  background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);
+  background-color: black; /*linear-gradient(-90deg, #6c6c6c 0%, black 100%);*/
 }
 
 .btn-secondary {
