Add second Hollywood article

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -79,11 +79,15 @@
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3>
 
-    <!-- To Forrest Gump, Wizard of Oz article:  -->
-
+    <!-- To Forrest Gump article:  -->
     <h3>
-       <a href="{% url 'article' 'run_forrest_run' %}">@ HOLLYWOOD</a>
+       <a href="{% url 'article' 'run_forrest_run' %}">@ HOLLYWOOD (first)</a>
     </h3>
+
+    <!-- To The Wizard of Oz article:  -->
+    <h3>
+      <a href="{% url 'article' 'oz' %}">@ HOLLYWOOD (second)</a>
+   </h3>
 
     <!-- To St Paul:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3>
