Restore unrelated prior changes for different PR

--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -5,7 +5,7 @@
           <i class="fas fa-phone"></i> 1 (888) 512-1984
         </div>
         <div class="topbar-content col-md-4">
-          <i class="fas fa-envelope-open"></i>&nbsp;{{request.user.email}}
+          <i class="fas fa-envelope-open"></i> placeholder@email.com
         </div>
         <div class="topbar-content col-md-4">
           <div class="social text-right">
