--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -204,6 +204,14 @@ html{
 @media (min-width: 768px) {
   .navbar-expand-md .navbar-nav {
     margin: auto;
+
+  }
+
+@media (max-width: 980px) {
+  .navbar-expand-md .navbar-nav {
+    margin: auto;
+    font-size: 16px;
+
   }
 
   ol,
