--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -9,19 +9,19 @@
         </div>
         <div class="topbar-content col-md-4">
           <div class="social text-right">
-            <a href="#">
+            <a style="color:white;" href="#">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
+            <a style="color:white;" href="#">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="#">
+            <a style="color:white;" href="#">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a href="#">
+            <a style="color:white;" href="#">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#">
+            <a style="color:white;" href="#">
               <i class="fab fa-pinterest"></i>
             </a>
           </div>
