--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand d-none d-md-block" href="{% url 'portal' %}">
         <img id="pentacle" src="{% static 'img/pentacle.gif' %}" class="logo" alt="" id="squad_grey no-shadow">
       </a>
-      <button class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" id="toggler-button" data-target="#navbarNavAltMarkup" onclick="navbarButton()">
+      <button style="border-color: crimson;" class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" id="toggler-button" data-target="#navbarNavAltMarkup" onclick="navbarButton()">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
