Fixed 404 and 500 server w.r.t their functionality

--- a/templates/404.html
+++ b/templates/404.html
@@ -52,7 +52,7 @@
 <body>
 
   <article>
-    <!-- <img id="rose" src="{% static 'img/rose.svg' %}" /> -->
+    <!-- small rose img -->
     
     <h1>404:</h1>
 
@@ -64,7 +64,7 @@
         <a href="{% url 'essay_list' %}">Essay list</a>.
         <a href="{% url 'about' %}">About this site</a>.
       </p>
-      <center><img alt="Rose" src="{% static 'img/rose160.png' %}"/></center>
+      <!-- capital rose img -->
   <!-- <ul>
     <li></li>
     <li></li>
