--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
 
   {% include 'partials/_navbar.html' %}
 
-  <div class="main-container">
+  <div class="main-container tarot_key_background">
       {% block content %} {% endblock %}
   </div>
 
