--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 <!-- Begin Carousel code -->
-  <div class="carousel hide" >
+  <div class="carousel hide " >
     <div class="slider">
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
         <div class="slide"><img src="{% static 'img/cardback.jpg' %}" alt="card back image"></div>
@@ -62,9 +62,9 @@
 
   {% if generator %}
 
-      <div class="key">
+      <div class="key tarot_key_background">
 
-        <section class="general">
+        <section class="general tarot_key_background">
 
           <h1>Key {{ generator.number }}: {{ generator.title }} </h1>
 
