--- a/templates/404.html
+++ b/templates/404.html
@@ -7,6 +7,7 @@
     body {
       width: 60%;
       margin: auto;
+      
     }	
 
     h1 {
@@ -25,6 +26,7 @@
       overflow-wrap: break-word;
       max-width:100%;
       margin: auto;
+      margin-top: 32%;
     }
 
     a:link {
@@ -53,9 +55,9 @@
 
   <article>
     <!-- small rose img -->
-    
-    <h1>404:</h1>
-
+       <center>
+    <h1>404</h1>
+    <img src="https://i.imgur.com/3GjUX1R.png" alt="Archangel">
     <h2>"This page can't be found"</h2>
       <p>The page you navigated to doesn't exist because you have made a typo in your address bar or perhaps the system administrator removed or deactivated the article temporarily or maybe even permanently. Check back later?</p>
       
@@ -64,6 +66,8 @@
         <a href="{% url 'essay_list' %}">Essay list</a>.
         <a href="{% url 'about' %}">About this site</a>.
       </p>
+        <img src="https://i.imgur.com/5y9taLi.png" alt="Rose">
+      </center>
       <!-- capital rose img -->
   <!-- <ul>
     <li></li>
