--- a/templates/essays/content_changelog.html
+++ b/templates/essays/content_changelog.html
@@ -60,6 +60,70 @@
     }
 
 </style>
+<style>
+          h1 {
+            text-align: center;
+            margin-bottom: 0px;
+            margin-left: 0px;
+          }
+            
+    
+    h2 {
+  margin: 50px auto;
+  text-align: center;
+  margin: auto;
+}
+
+h5 {
+  font-size: 2em;
+  margin-top: 50px auto;
+  text-align: center;
+}
+
+article {
+      padding: 100px;
+      overflow-wrap: break-word;
+      max-width:100%;
+      margin: auto;
+    }
+
+
+.strike {
+  text-decoration: line-through dotted red;
+}
+
+.done {
+  text-decoration: line-through dotted red;
+}
+
+ul {
+  margin-left: -50px;
+}
+li {
+  line-height: 150%;
+}
+
+.emphasis {
+  font-size: 175%;
+}
+
+ul {
+  list-style-type: 1em;
+  line-height: 2em;
+}
+
+ul.biblio {
+  list-style-type: none;
+  line-height: 1.5em;
+  text-indent: -15px;
+}
+
+li.biblio {
+  padding: 15px;
+}
+
+
+      </style>
 </head>
 {% endblock %}
 
@@ -72,12 +136,16 @@
     {% for change in changes %}
     <h1 id="bibliography">{{ change.title }}</h1>
     <ul class="content">
+      {% for ch in change.log_to_bullets %}
       <li class="biblio">
-        <p>
-          {{ change.log_to_bullets|linebreaks }}
-        </p>
-      </li>  
+        
+          {{ ch|safe }}
+          
+       
+      </li> 
+      {% endfor %} 
     </ul>
+
 
 
     {% endfor %}
