Removed UA code snippet from portal.html and kept GA4 and GTM API code

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -139,7 +139,9 @@
 
   <!--  {% comment %} <script src="js/jquery.easing.min.js"></script> {% endcomment %} -->
 
-  <script>
+
+  <!-- Universal analytics is deprecated and GA4 is being used over UA -->
+  <!-- <script>
     document.addEventListener("DOMContentLoaded", function () {
       const introText = document.getElementsByClassName('intro__text'),
         introBtn = document.getElementsByClassName('intro__btn');
@@ -160,7 +162,7 @@
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-  </script>
+  </script> -->
 
   <!-- Matomo -->
   <script>
