--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="keywords,here">
   <meta name="robots" content="noindex,nofollow" />
   <meta name="theme-color" content="black">
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel="shortcut icon" href="{% static 'img/crimson-hexagram.ico' %}" type="image/vnd.microsoft.icon">
   <!--  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
   <!-- <link rel="stylesheet" href="css/styles.css" type="text/css">-->
   
