Initialize CSS for hacker icon

--- a/templates/landings/how_to.html
+++ b/templates/landings/how_to.html
@@ -3,6 +3,19 @@
 {% load static %}
 {% block extra_head %}
   <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">
+
+  <style> 
+  img {
+    padding: 10px;
+    /* border: 0pt none; */
+    float: right;
+    padding: 20px;
+    width: 45%;
+    clear: both;
+    display: block;
+   border: None;
+  }
+</style>
 {% endblock %}
 
 <style>
