Linear gradient background color of tarot_key.html for all kind of devices

--- a/tarot_juicer/static/css/tarot_key.css
+++ b/tarot_juicer/static/css/tarot_key.css
@@ -666,6 +666,13 @@ img {
   color: white;
   }
 }
+@media (min-width: 200px) and (max-width: 767px) {
+  .gradient_background {
+    background: linear-gradient(-90deg, #6c6c6c 0%, black 100%);
+    background-attachment: fixed;
+    color: white;
+  }
+}
 
 /* ##Device = Most of the Smartphones Mobiles (Portrait)
     ##Screen = B/w 320px to 479px */
